@@ -1,3 +1,8 @@
+* Oct 18 2017 Massimiliano Pala <madwolf@openca.org>
+- Small memory leak fix for logging on stderr and stdout
+- Fixed small memory leak in PKI_X509_NAME_get_parsed()
+- Simplified PKI_X509_CERT_check_pubkey() internals
+
 * Sep 25 2017 Massimiliano Pala <madwolf@openca.org>
 - Fixed an error for default HSM callbacks for OpenSSL tokens that prevented signature generation
 - Fixed an error for OpenSSL's key generation (wrong return code)
